[tool.poetry]
name = "passcrash"
version = "0.1.0"
description = ""
authors = ["H3r1CH <H3r1CH@protonmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
passcrash = "passcrash.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.6.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
